V.Next
----------
- [MINOR] Format thread+correlationId metadata only once logging is clearly opted-in (#1917)
- [MINOR] Remove unnecessary synchronization when storage access is already guarded (#1928)
- [MINOR] Keep in-memory cache of all credentials and accountrecords (#1929)

V.9.1.0
----------
- [MINOR] Convert crypto operation spans into metrics (#1909)
- [PATCH] Move clearClientCertPreferences to onCreateView only (#1915)

V.9.0.1
----------
- [PATCH] Moving ClearClientCertPreferences back to onCreate and handleBackButtonPressed (#1908)

V.9.0.0
----------
- [MINOR] Add BrokerContentProvider path and IpcStrategy for new device registration API (#1843)
- [PATCH] Adding cached credential service request id to telemetry (#1866)
- [MAJOR] Add support for client/application managed key in pop flow (#1854)
- [PATCH] Moved clearClientCertPreferences to onPageLoaded. (#1855)
- [MINOR] Add new exception type for broker protocol not supported exception during msal-broker handshake (#1859)
- [MINOR] Leverage Otel Utility create span method (#1877)
- [MINOR] Add Open Telemetry explicitly in common as transitive is set to false (#1882)
- [MINOR] Add open telemetry to consumer rules (#1883)
- [PATCH] Fixes MSAL Issue #1715 (#1894)
- [MINOR] Add support to reset broadcast Executor service (#1895)

V.8.0.3
----------
- [PATCH] Add null checks for devices that do not support USB_SERVICE. (#1885)

V.8.0.2
----------
- [PATCH] Remove java.time.* Java8 APIs (#1868)

V.8.0.1
----------
- [PATCH] Avoid keystore key overwriting for apps using sharedUserId. (#1864)

Version 8.0.0
----------
- [MINOR] Add opt-in flag to skip expensive SecretKey invalidation steps (#1837)
- [MINOR] Storage performance improvements (#1852)
- [PATCH] More fields exposed for GSON based logging for Broker Token Parameters (#1849)
- [MINOR] Logging performance speedup, removal of IDetailedLoggerCallback/logDiscarded (#1836)
- [MINOR] Expose sign() method in PKeyAuth as opposed to the key itself (#1846)