@@ -3,6 +3,7 @@ V.Next
 - [MINOR] Format thread+correlationId metadata only once logging is clearly opted-in (#1917)
 - [MINOR] Remove unnecessary synchronization when storage access is already guarded (#1928)
 - [MINOR] Keep in-memory cache of all credentials and accountrecords (#1929)
+- [PATCH] Read private key before public key to avoid OS bug (#2091) 
 
 V.9.1.0
 ----------
